navegação entre componentes

--- a/SPA/src/components/templates/nav/nav.component.html
+++ b/SPA/src/components/templates/nav/nav.component.html
@@ -14,8 +14,8 @@
                 </i>
                 Produtos
             </a>
-            <a mat-list-item  routerLink="/products">
-                <i class="material-icons">
+            <a mat-list-item  routerLink="/clientes">
+                <i class="material-icons">  
                     face
                 </i>
                 Clientes
