--- a/SPA/src/components/product/product-create/product-create.component.html
+++ b/SPA/src/components/product/product-create/product-create.component.html
@@ -12,7 +12,7 @@
         </mat-form-field>
 
         <mat-form-field>
-            <input matInput placeholder="Nacional ou Importado"
+            <input matInput placeholder="Nacional or Importado"
                 [(ngModel)]="product.Fabricacao" name="Fabricacao">
         </mat-form-field>
 
