crate and read clients

--- a/SPA/src/components/templates/nav/nav.component.html
+++ b/SPA/src/components/templates/nav/nav.component.html
@@ -14,7 +14,7 @@
                 </i>
                 Produtos
             </a>
-            <a mat-list-item  routerLink="/clientes">
+            <a mat-list-item  routerLink="/client">
                 <i class="material-icons">  
                     face
                 </i>
