--- a/SPA/src/components/clientes/client-create/client-create.component.html
+++ b/SPA/src/components/clientes/client-create/client-create.component.html
@@ -2,7 +2,7 @@
     <mat-card-title>Criar Cliente</mat-card-title>
     <form>
         <mat-form-field>
-            <input matInput placeholder="Codigo do Cliente"
+            <input matInput placeholder="Codigo do Cliente"  type="number"
                 [(ngModel)]="client.CodigoCliente" name="CodigoCliente">
         </mat-form-field>
         
